src/objects/Measurement__c.object
<CustomObject>
    <description>Custom object for submitting measurements / metrics to University of Texas, Dallas for TL9000 certification</description>
    <fields>
        <fullName>DFc__c</fullName>
        <label>DFc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIPa__c</fullName>
        <label>DIPa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIPd__c</fullName>
        <label>DIPd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIa__c</fullName>
        <label>DIa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DId__c</fullName>
        <label>DId</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DVa_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DVa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DVd_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DVd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Template_Type__c</fullName>
        <label>Data Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FRa__c</fullName>
        <label>FRa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRri__c</fullName>
        <label>FRri</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRrt__c</fullName>
        <label>FRrt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRry__c</fullName>
        <label>FRry</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRs__c</fullName>
        <label>FRs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRsi__c</fullName>
        <label>FRsi</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRst__c</fullName>
        <label>FRst</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRsy__c</fullName>
        <label>FRsy</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fc__c</fullName>
        <label>Fc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr2c__c</fullName>
        <label>Fr2c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr2d__c</fullName>
        <label>Fr2d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr3c__c</fullName>
        <label>Fr3c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr3d__c</fullName>
        <label>Fr3d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr4c_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fr4c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fr4d_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fr4d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_FRT_7_5__c</fullName>
        <defaultValue>&quot;FRT&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_FRT__c</fullName>
        <defaultValue>&quot;FRT&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_FR__c</fullName>
        <defaultValue>&quot;FR&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_MTRS__c</fullName>
        <defaultValue>&quot;MTRS&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_NPR_7_5__c</fullName>
        <defaultValue>&quot;NPR&quot;</defaultValue>
        <label>Measurement_ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_NPR__c</fullName>
        <defaultValue>&quot;NPR&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_OFR_7_5__c</fullName>
        <defaultValue>&quot;OFR&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_OFR__c</fullName>
        <defaultValue>&quot;OFR&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_OTD_7_5__c</fullName>
        <defaultValue>&quot;OTD&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_OTD__c</fullName>
        <defaultValue>&quot;OTD&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SFQ__c</fullName>
        <defaultValue>&quot;SFQ&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SONE__c</fullName>
        <defaultValue>&quot;SONE&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SO__c</fullName>
        <defaultValue>&quot;SO&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SPR__c</fullName>
        <defaultValue>&quot;SPR&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SQ_7_5__c</fullName>
        <defaultValue>&quot;SQ&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_ID_SSO_7_5__c</fullName>
        <defaultValue>&quot;SSO&quot;</defaultValue>
        <label>Measurement ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Of_Data__c</fullName>
        <label>Month Of Data</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEOa__c</fullName>
        <label>NEOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEOdc__c</fullName>
        <label>NEOdc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEOdp__c</fullName>
        <label>NEOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEOec__c</fullName>
        <label>NEOec</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEOep__c</fullName>
        <label>NEOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEOs__c</fullName>
        <label>NEOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPRa__c</fullName>
        <label>NPRa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPRs_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NPRs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPRs__c</fullName>
        <label>NPRs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sbmissions__c</fullName>
        <label>No.of Sbmissions</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Np1__c</fullName>
        <label>Np1</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Np2__c</fullName>
        <label>Np2</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Np3__c</fullName>
        <label>Np3</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Np4_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Np4</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ns_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ns</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nso_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nso</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of2c__c</fullName>
        <label>Of2c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of2d__c</fullName>
        <label>Of2d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of3c__c</fullName>
        <label>Of3c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of3d__c</fullName>
        <label>Of3d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of4c_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Of4c</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of4d_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Of4d</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category_Name__c</fullName>
        <label>Product Category Name</label>
        <picklist>
            <picklistValues>
                <fullName>4G LTE BTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Station Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Transceiver System (BTS)-Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge Routers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Location Register (HLR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MME and SGSN/MME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-line Operations Support Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-line Critical OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconfigurable Optical Add-Drop Multiplexer (ROADM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cell Radios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SONET/SDH Transport Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDM/DWDM/Optical Amplification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLAN Base Station Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless (Liquid Core) Flexi NS - SGSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic (2G and earlier) Base Transceiver System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Network Engineering Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Development Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom Network Integration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Operations Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category_Table_Name__c</fullName>
        <label>Product Category Table Name</label>
        <picklist>
            <picklistValues>
                <fullName>4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.2.1.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.2.1.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.2.1.2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>7.5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.2.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Location__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <label>Product / Location</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_ID__c</fullName>
        <label>Registration ID</label>
        <picklist>
            <picklistValues>
                <fullName>TL1193</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL1310</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TL1768</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL5464</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL6584</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_from_UTD__c</fullName>
        <label>Response from UTD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOa__c</fullName>
        <label>SOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOda__c</fullName>
        <label>SOda</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOdp__c</fullName>
        <label>SOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOea__c</fullName>
        <label>SOea</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOep__c</fullName>
        <label>SOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOs__c</fullName>
        <label>SOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPRa__c</fullName>
        <label>SPRa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPRs__c</fullName>
        <label>SPRs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQd_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SQd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQt_7_5__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SQt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Option__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Software Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sp1__c</fullName>
        <label>Sp1</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sp2__c</fullName>
        <label>Sp2</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sp3__c</fullName>
        <label>Sp3</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Data__c</fullName>
        <description>Specifies whether the data being submitted is LIVE production data (or) TEST data.</description>
        <inlineHelpText>Please select LIVE for Production Data and TEST for test / non-production data.</inlineHelpText>
        <label>Submit Data</label>
        <picklist>
            <picklistValues>
                <fullName>LIVE</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TEc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEnc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TEnc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TMc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMnc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TMnc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UTDSubmit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UTD Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>User Name / Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Of_Data__c</fullName>
        <label>Year Of Data</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hNEOa__c</fullName>
        <label>hNEOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hNEOdc__c</fullName>
        <label>hNEOdc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hNEOdp__c</fullName>
        <label>hNEOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hNEOec__c</fullName>
        <label>hNEOec</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hNEOep__c</fullName>
        <label>hNEOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hNEOs__c</fullName>
        <label>hNEOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOa__c</fullName>
        <label>hSOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOda__c</fullName>
        <label>hSOda</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOdp__c</fullName>
        <label>hSOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOea__c</fullName>
        <label>hSOea</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOep__c</fullName>
        <label>hSOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hSOs__c</fullName>
        <label>hSOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOa__c</fullName>
        <label>rNEOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOdc__c</fullName>
        <label>rNEOdc</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOdp__c</fullName>
        <label>rNEOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOec__c</fullName>
        <label>rNEOec</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOep__c</fullName>
        <label>rNEOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rNEOs__c</fullName>
        <label>rNEOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOa__c</fullName>
        <label>rSOa</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOda__c</fullName>
        <label>rSOda</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOdp__c</fullName>
        <label>rSOdp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOea__c</fullName>
        <label>rSOea</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOep__c</fullName>
        <label>rSOep</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSOs__c</fullName>
        <label>rSOs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>submit_yes_no__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm whether data needs to be submitted to UTD</inlineHelpText>
        <label>Are you submitting data for this Product</label>
        <type>Checkbox</type>
    </fields>
    <label>Measurement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Response_from_UTD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Category_Name__c</columns>
        <columns>Year_Of_Data__c</columns>
        <columns>Month_Of_Data__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Submissions - Current Month</label>
    </listViews>
    <listViews>
        <fullName>ViewAll</fullName>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Category_Name__c</columns>
        <columns>Year_Of_Data__c</columns>
        <columns>Month_Of_Data__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>ViewAll</label>
    </listViews>
    <nameField>
        <displayFormat>UTD-{000}</displayFormat>
        <label>Measurement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <recordTypes>
        <fullName>Product_Category_1_1</fullName>
        <active>true</active>
        <description>Record Type for Product Category 1.1</description>
        <label>Product Category 1.1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_1_2_2_2</fullName>
        <active>true</active>
        <description>Record Type for Product Category 1.2.2.2</description>
        <label>Product Category 1.2.2.2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_1_2_7</fullName>
        <active>true</active>
        <description>Record Type for Product Category 1.2.7</description>
        <label>Product Category-1.2.7</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_1_2_9_2</fullName>
        <active>true</active>
        <description>Record Type for Product Category 1.2.9.2</description>
        <label>Product Category 1.2.9.2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_2_3</fullName>
        <active>true</active>
        <description>Record Type for Product Category 2.3</description>
        <label>Product Category 2.3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_2_5</fullName>
        <active>true</active>
        <description>Record Type for Product Category 2.5</description>
        <label>Product Category 2.5</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Category_2_8</fullName>
        <active>true</active>
        <description>Product Category 2.8</description>
        <label>Product Category -2.8</label>
    </recordTypes>
</CustomObject>